--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <!-- https://www.w3schools.com/tags/tag_meta.asp | Added keywords and author to used template for SEO -->
     <meta name="keywords" content="Gym, Fitness, Strength, Cardio, Condition, Grouplessons, Dream Big">
-    <meta name="Description" content="ze Gym offers HIIT, Bodypump, Boxing, Spinning, Pilates and Flow Yoga." />
+    <meta name="Description" content="ze Gym offers HIIT, Bodypump, Boxing, Spinning, Pilates and Yoga." />
     <meta name="author" content="Yorick van den Hurk">
 
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css"
@@ -32,7 +32,7 @@
                 </button>
                 <div class="collapse navbar-collapse" id="navbar-menu">
                     <!-- Navigation menu items-->
-                    <ul class="navbar-nav mx-auto">
+                    <ul class="navbar-nav mx-auto ">
                         <li class="nav-item" data-toggle="collapse">
                             <a href="#home" class="nav-link">Home</a>
                         </li>
@@ -52,7 +52,7 @@
                 </div>
                 <!-- Button based on https://jsfiddle.net/shuvamallick/3o0h5oka/  but completely customized-->
                 <!-- Trigger/Open Sign in Modal  ||  Placed above footer -->
-                <button type="button" class="btn-slide-red btn-signin-modal" data-toggle="modal"
+                <button type="button" class="btn-slide-red btn-signin-modal d-none d-md-block" data-toggle="modal"
                     data-target="#signin-modal">Sign in</button>
             </nav>
         </div>
@@ -566,8 +566,50 @@
         </div>
     </div>
     <footer>
+        <div class="container footer-container">
+            <section id="footer">
+                <div class="row">
+                    <div class="col-4">
+                        <table>
+                            <tr>
+                                <th class="opening">Monday</th>
+                                <td>6am - 10pm</td>
+                            </tr>
+                            <tr>
+                                <th class="opening">Tuesday</th>
+                                <td>6am - 10pm</td>
+                            </tr>
+                            <tr>
+                                <th class="opening">Wednesday</th>
+                                <td>6am - 10pm</td>
+                            </tr>
+                            <tr>
+                                <th class="opening">Thursday</th>
+                                <td>6am - 10pm</td>
+                            </tr>
+                            <tr>
+                                <th class="opening">Friday</th>
+                                <td>6am - 10pm</td>
+                            </tr>
+                            <tr>
+                                <th class="opening">Saturday</th>
+                                <td>6am - 10pm</td>
+                            </tr>
+                            <tr>
+                                <th class="opening">Sunday</th>
+                                <td>6am - 10pm</td>
+                            </tr>
+                        </table>
+                    </div>
+                    <div class="col-4 d-none d-md-block">
 
+                    </div>
+                    <div class="col-4">
 
+                    </div>
+                </div>
+            </section>
+        </div>
     </footer>
 
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
