Fixed  responsiveness of footer logo

--- a/index.html
+++ b/index.html
@@ -569,7 +569,7 @@
         <div class="container-fluid footer-container">
             <section id="footer">
                 <div class="row">
-                    <div class="col-4">
+                    <div class="col-5">
                         <table>
                             <tr class="text-center">
                                 <th class="opening">Monday</th>
@@ -601,8 +601,8 @@
                             </tr>
                         </table>
                     </div>
-                        <div class="col-4 logo "></div>
-                        <div class="col-4">
+                        <div class="col-2 logo d-none d-md-block"></div>
+                        <div class="col-5">
                             <address class="location text-center">
                                 Hoofdweg 1555<br>
                                 1055 AB<br>
