Footer responsiveness optimized

--- a/index.html
+++ b/index.html
@@ -568,8 +568,8 @@
     <footer id="footer">
         <div class="container-fluid footer-container">
             <section id="footer">
-                <div class="row">
-                    <div class="col-5">
+                <div class="row justify-content-between">
+                    <div class="col-5 opening">
                         <table>
                             <tr class="text-center">
                                 <th class="opening">Monday</th>
@@ -602,8 +602,8 @@
                         </table>
                     </div>
                         <div class="col-2 logo d-none d-md-block"></div>
-                        <div class="col-5">
-                            <address class="location text-center">
+                        <div class="col-5 location">
+                            <address>
                                 Hoofdweg 1555<br>
                                 1055 AB<br>
                                 Amsterdam<br>
