Fixed responsiveness callout - big text gone at default

--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col-4">
+            <div class="col-4 d-none d-sm-block">
                 <div class="row row-height-dream"></div>
                 <div class="row row-height-dream">D</div>
                 <div class="row row-height-dream">R</div>
@@ -87,7 +87,7 @@
                 <div class="row row-height-dream">A</div>
                 <div class="row row-height-dream">M</div>
                 <div class="row row-height-dream"></div>
-                <div class="row row-height-dream big-size">BIG</div>
+                <div class="row row-height-dream text-center big">BIG</div>
 
             </div>
         </div>
