--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
             <div class="col-4"></div>
             <div class="col-4">
                 <div class="row row-height"></div>
-                <div class="row row-height"></div>
+                <div class="row row-height-smaller"></div>
                 <div class="row row-height">
                     <div class="callout-section text-center">
                         <div class="callout-smaller border border-white">
@@ -94,7 +94,7 @@
     </div>
 
     <!-- Sticky social bar is based on https://www.w3schools.com/howto/howto_css_sticky_social_bar.asp -->
-    <div class="icon-bar">
+    <div class="icon-bar d-none d-sm-block">
         <a href="https://www.facebook.com" target="_blank" rel="noopener noreferrer" class="facebook"><i
                 class="fab fa-facebook-square"></i></a>
         <a href="https://www.instagram.com" target="_blank" rel="noopener noreferrer" class="instagram"><i
