--- a/index.html
+++ b/index.html
@@ -337,7 +337,7 @@
                     <h3 class="text-center">Timetable Group Lessons </h3>
                 </div>
                 <div class="timetable-classes"></div>
-                <table class="table table-bordered">
+                <table class="table table-bordered text-center">
                     <thead>
                         <tr>
                             <th scope="col">#</th>
