--- a/index.html
+++ b/index.html
@@ -9,13 +9,16 @@
     <meta name="keywords" content="Gym, Fitness, Strength, Cardio, Condition, Grouplessons, Dream Big">
     <meta name="Description" content="ze Gym offers HIIT, Bodypump, Boxing, Spinning, Pilates and Yoga." />
     <meta name="author" content="Yorick van den Hurk">
-
+    
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css"
         integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css">
     <link rel="stylesheet" href="assets/css/style.css">
-
-    <link rel="icon" type="image/png" href="favicon.png"/>
+    <!-- Google fonts -->
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,700;1,300&family=Roboto:ital,wght@0,300;0,400;0,700;1,300&display=swap" rel="stylesheet">
+    <!-- Favicon -->
+    <link rel="icon" type="image/png" href="favicon.png" />
     <title>ze Gym | Dream Big</title>
 
 </head>
@@ -605,14 +608,14 @@
                         </table>
                     </div>
                     <div class="col-2 logo d-none d-md-block">
-                  <!--    <div class="social-buttons social-button-footer">
+                        <!--    <div class="social-buttons social-button-footer">
                             <a href="https://www.facebook.com/" target="_blank" rel="noopener"><i
                                     class="fab fa-facebook-square"><span class="sr-only" id="facebook-footer">Facebook</span></i></a>
                             <a href="https://www.instagram.com/" target="_blank" rel="noopener"><i
                                     class="fab fa-instagram-square"><span class="sr-only" id="instagram-footer">Instagram</span></i></a>
                             <a href="https://twitter.com/" target="_blank" rel="noopener"><i
                                     class="fab fa-youtube-square"><span class="sr-only" id="youtube-footer">Youtube</span></i></a>
-                        </div>--> 
+                        </div>-->
                     </div>
                     <div class="col-5 location">
                         <address>
