Changed DREAM BIG at hero-image for cosmetic appeal

--- a/index.html
+++ b/index.html
@@ -92,7 +92,10 @@
                 <div class="row row-height-dream">A</div>
                 <div class="row row-height-dream">M</div>
                 <div class="row row-height-dream"></div>
-                <div class="row row-height-dream text-center big">BIG</div>
+                <div class="row row-height-dream">B</div>
+                <div class="row row-height-dream">I</div>
+                <div class="row row-height-dream">G</div>
+                <div class="row row-height-dream"></div>
 
             </div>
         </div>
