--- a/index.html
+++ b/index.html
@@ -134,6 +134,8 @@
         </section>
     </div>
 
+    <hr class="hr-container">
+
     <!-- Testimonials -->
     <!-- Coding is based on https://getbootstrap.com/docs/4.6/components/carousel/ but customized into not being a carousel - see testing.md -->
     <!-- Testimonials are based on https://eatsleepwander.com/gym-review-example/ -->
@@ -248,6 +250,7 @@
         </section>
     </div>
 
+    <hr class="hr-container">
 
     <!-- Classes-->
     <div class="container classes-container">
@@ -335,6 +338,8 @@
             </div>
         </section>
     </div>
+
+    <hr class="hr-container">
 
     <!-- Timetable -->
     <!-- Based on https://getbootstrap.com/docs/4.0/content/tables/  -->
@@ -424,6 +429,8 @@
             </div>
         </section>
     </div>
+
+    <hr class="hr-container">
 
     <!-- Contact -->
     <!-- Based on https://getbootstrap.com/docs/4.6/components/forms/ -->
@@ -574,6 +581,7 @@
             </div>
         </div>
     </div>
+
     <footer id="footer">
         <div class="container-fluid footer-container">
             <section id="footer">
