--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         <!-- Navigation bar -->
         <!-- Based on https://www.youtube.com/watch?v=23bpce-5s8I  and customized/expanded further -->
         <div class="container-fluid navbar-container">
-            <nav id="navbar" class="navbar navbar-expand-sm navbar-dark bg-dark fixed-top">
+            <nav id="navbar" class="navbar navbar-expand-sm navbar-dark fixed-top">
                 <a href="#home" class="navbar-brand">ze Gym</a>
                 <!-- Navigation toggle-->
                 <button class="navbar-toggler" data-toggle="collapse" data-target="#navbar-menu" type="button"
