Cleared unnecessary hr due to clearing of timetable at small screens

--- a/index.html
+++ b/index.html
@@ -16,7 +16,9 @@
     <link rel="stylesheet" href="assets/css/style.css">
     <!-- Google fonts -->
     <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Abril+Fatface&family=Roboto:ital,wght@0,300;0,400;0,700;1,300&display=swap" rel="stylesheet">
+    <link
+        href="https://fonts.googleapis.com/css2?family=Abril+Fatface&family=Roboto:ital,wght@0,300;0,400;0,700;1,300&display=swap"
+        rel="stylesheet">
     <!-- Favicon -->
     <link rel="icon" type="image/png" href="favicon.png" />
     <title>ze Gym | Dream Big</title>
@@ -430,7 +432,7 @@
         </section>
     </div>
 
-    <hr class="hr-container">
+    <hr class="hr-container d-none d-lg-block">
 
     <!-- Contact -->
     <!-- Based on https://getbootstrap.com/docs/4.6/components/forms/ -->
@@ -585,7 +587,7 @@
     <footer id="footer">
         <div class="container-fluid footer-container">
             <section id="footer">
-                <div class="row justify-content-between">
+                <div class="row justify-content-around">
                     <div class="col-5 opening">
                         <table>
                             <tr class="text-center">
@@ -618,15 +620,17 @@
                             </tr>
                         </table>
                     </div>
-                    <div class="col-2 logo d-none d-md-block">
-                        <!--    <div class="social-buttons social-button-footer">
-                            <a href="https://www.facebook.com/" target="_blank" rel="noopener"><i
-                                    class="fab fa-facebook-square"><span class="sr-only" id="facebook-footer">Facebook</span></i></a>
-                            <a href="https://www.instagram.com/" target="_blank" rel="noopener"><i
-                                    class="fab fa-instagram-square"><span class="sr-only" id="instagram-footer">Instagram</span></i></a>
-                            <a href="https://twitter.com/" target="_blank" rel="noopener"><i
-                                    class="fab fa-youtube-square"><span class="sr-only" id="youtube-footer">Youtube</span></i></a>
-                        </div>-->
+                    <div class="col-2 logo d-none d-md-block"> </div>
+                    <div id="social-button-footer" class="social-buttons col-2 d-none d-sm-block d-md-none">
+                        <a href="https://www.facebook.com/" target="_blank" rel="noopener"><i
+                                class="fab fa-facebook-square"><span class="sr-only"
+                                    id="facebook-footer">Facebook</span></i></a>
+                        <a href="https://www.instagram.com/" target="_blank" rel="noopener"><i
+                                class="fab fa-instagram-square"><span class="sr-only"
+                                    id="instagram-footer">Instagram</span></i></a>
+                        <a href="https://twitter.com/" target="_blank" rel="noopener"><i
+                                class="fab fa-youtube-square"><span class="sr-only"
+                                    id="youtube-footer">Youtube</span></i></a>
                     </div>
                     <div class="col-5 location">
                         <address>
