--- a/index.html
+++ b/index.html
@@ -587,8 +587,8 @@
     <footer id="footer">
         <div class="container-fluid footer-container">
             <section id="footer">
-                <div class="row justify-content-around">
-                    <div class="col-5 opening">
+                <div class="row justify-content-between">
+                    <div class="col-4 opening">
                         <table>
                             <tr class="text-center">
                                 <th class="opening">Monday</th>
@@ -620,8 +620,10 @@
                             </tr>
                         </table>
                     </div>
-                    <div class="col-2 logo d-none d-md-block"> </div>
-                    <div id="social-button-footer" class="social-buttons col-2 d-none d-sm-block d-md-none">
+                    <div class="col-4 d-none d-md-block text-center"> 
+                        <a href="#home"><img src="assets/images/logo/logo-small.png" height="80" width="194" id="logo-footer" alt="Click logo to go back to the top of the page"></a>
+                    </div>
+                    <div id="social-button-footer" class="social-buttons col-4 d-none d-sm-block d-md-none">
                         <a href="https://www.facebook.com/" target="_blank" rel="noopener"><i
                                 class="fab fa-facebook-square"><span class="sr-only"
                                     id="facebook-footer">Facebook</span></i></a>
@@ -632,7 +634,7 @@
                                 class="fab fa-youtube-square"><span class="sr-only"
                                     id="youtube-footer">Youtube</span></i></a>
                     </div>
-                    <div class="col-5 location">
+                    <div class="col-4 location">
                         <address>
                             Hoofdweg 1555<br>
                             1055 AB<br>
