Added clickable logo to navbar directing to #home

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         <!-- Based on https://www.youtube.com/watch?v=23bpce-5s8I  and customized/expanded further -->
         <div class="container-fluid navbar-container">
             <nav id="navbar" class="navbar navbar-expand-sm navbar-dark fixed-top">
-                <a href="#home" class="navbar-brand">ze Gym</a>
+                <a href="#home" class="navbar-brand"><img src="assets/images/logo/logo-small.png" height="50" width="110" id="logo-footer" alt="Click logo to go back to the top of the page"></a>
                 <!-- Navigation toggle-->
                 <button class="navbar-toggler" data-toggle="collapse" data-target="#navbar-menu" type="button"
                     aria-controls="navbar-menu" aria-expanded="false" aria-label="toggle-navigation">
