Styling of fonts and margins between sections

--- a/index.html
+++ b/index.html
@@ -31,7 +31,9 @@
         <!-- Based on https://www.youtube.com/watch?v=23bpce-5s8I  and customized/expanded further -->
         <div class="container-fluid navbar-container">
             <nav id="navbar" class="navbar navbar-expand-sm navbar-dark fixed-top">
-                <a href="#home" class="navbar-brand"><img src="assets/images/logo/logo-small.png" height="50" width="110" id="logo-footer" alt="Click logo to go back to the top of the page"></a>
+                <!-- Navbar Logo -->
+                <a href="#home" class="navbar-brand"><img src="assets/images/logo/logo-small.png" height="50"
+                        width="110" id="logo-footer" alt="Click logo to go back to the top of the page"></a>
                 <!-- Navigation toggle-->
                 <button class="navbar-toggler" data-toggle="collapse" data-target="#navbar-menu" type="button"
                     aria-controls="navbar-menu" aria-expanded="false" aria-label="toggle-navigation">
@@ -86,7 +88,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col-4 d-none d-sm-block">
+            <div class="col-4 d-none d-sm-block dream-big">
                 <div class="row row-height-dream"></div>
                 <div class="row row-height-dream">D</div>
                 <div class="row row-height-dream">R</div>
@@ -116,7 +118,7 @@
     <!-- About us -->
     <div class="container aboutus-container">
         <section id="aboutus" class="container">
-            <div class="container aboutus-container text-center">
+            <div class="container font-weight-bold text-center">
                 <h2 class="font-weight-bold">About Us</h2>
                 <p class="aboutus-p"> ze Gym is an ultra-modern fitness center with excellent amenities and training
                     equipment. We offer a wide range of classes and exercising programs, tailored to improve stamina and
@@ -143,7 +145,7 @@
     <!-- Testimonials are based on https://eatsleepwander.com/gym-review-example/ -->
     <div class="container testemonials-container">
         <section id="testimonials" class="text-center">
-            <h2 class="font-weight-bold">Testimonials</h2>
+            <h2 class="font-weight-bold head-testimonials">Testimonials</h2>
             <div class="row text-center">
                 <div class="col-md-4">
                     <div class="testimonial">
@@ -151,7 +153,7 @@
                             <img src="assets/images/testimonial-images/review1.png" class="rounded-circle img-fluid"
                                 alt="review-one">
                         </div>
-                        <h5 class="font-weight-bold dark-grey-text mt-4">Ava Adley</h5>
+                        <h6 class="dark-grey-text mt-4">Ava Adley</h6>
                         <p><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i
                                 class="fas fa-star"></i></p>
                         <hr class="hr-testimonial">
@@ -168,7 +170,7 @@
                             <img src="assets/images/testimonial-images/review2.png" class="rounded-circle img-fluid"
                                 alt="review-two">
                         </div>
-                        <h5 class="font-weight-bold dark-grey-text mt-4">Bernardo Bason</h5>
+                        <h6 class="dark-grey-text mt-4">Bernardo Bason</h6>
                         <p><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i
                                 class="fas fa-star"></i><i class="fas fa-star-half-alt"></i></p>
                         <hr class="hr-testimonial">
@@ -185,7 +187,7 @@
                             <img src="assets/images/testimonial-images/review3.png" class="rounded-circle img-fluid"
                                 alt="review-three">
                         </div>
-                        <h5 class="font-weight-bold dark-grey-text mt-4">Christina Cabral</h5>
+                        <h6 class="dark-grey-text mt-4">Christina Cabral</h6>
                         <p><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i
                                 class="fas fa-star"></i><i class="fas fa-star-half-alt"></i></p>
                         <hr class="hr-testimonial">
@@ -201,7 +203,7 @@
                             <img src="assets/images/testimonial-images/review4.png" class="rounded-circle img-fluid"
                                 alt="review-four">
                         </div>
-                        <h5 class="font-weight-bold dark-grey-text mt-4">Dominic Daniau</h5>
+                        <h6 class="dark-grey-text mt-4">Dominic Daniau</h6>
                         <p><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i
                                 class="fas fa-star"></i></p>
                         <hr class="hr-testimonial">
@@ -218,7 +220,7 @@
                             <img src="assets/images/testimonial-images/review5.png" class="rounded-circle img-fluid"
                                 alt="review-five">
                         </div>
-                        <h5 class="font-weight-bold dark-grey-text mt-4">Eeshani Elayavalli</h5>
+                        <h6 class="dark-grey-text mt-4">Eeshani Elayavalli</h6>
                         <p><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i
                                 class="fas fa-star"></i><i class="fas fa-star"></i></p>
                         <hr class="hr-testimonial">
@@ -237,7 +239,7 @@
                             <img src="assets/images/testimonial-images/review6.png" class="rounded-circle img-fluid"
                                 alt="review-six">
                         </div>
-                        <h5 class="font-weight-bold dark-grey-text mt-4">Friedrich Fahlmer</h5>
+                        <h6 class="dark-grey-text mt-4">Friedrich Fahlmer</h6>
                         <p><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i
                                 class="fas fa-star"></i><i class="fas fa-star-half-alt"></i></p>
                         <hr class="hr-testimonial">
@@ -258,11 +260,11 @@
     <div class="container classes-container">
         <section id="classes" class="container text-center">
             <div>
-                <h3 class="font-weight-bold">Classes</h3>
+                <h2 class="font-weight-bold head-classes">Classes</h2>
             </div>
             <div class="row">
-                <div class="col-6 col-md-4 class-title">
-                    <h4 class="font-weight-bold dark-grey-text mt-4">HIIT</h4>
+                <div class="col-6 col-md-4 ">
+                    <h4 class="font-weight-bold dark-grey-text mt-4 class-title">HIIT</h4>
                     <div class="classes-class">
                         <!-- Text used from https://www.fearlessmotivation.com/2016/09/28/no-time-for-exercise-10-reasons-why-you-should-use-hiit/  -->
                         <p class="d-none d-md-block classes-p">Every day we make great efforts at juggling demands of
@@ -274,8 +276,8 @@
                             best fitness value for your time.</p>
                     </div>
                 </div>
-                <div class="col-6 col-md-4 class-title">
-                    <h4 class="font-weight-bold dark-grey-text mt-4">Bodypump</h4>
+                <div class="col-6 col-md-4">
+                    <h4 class="font-weight-bold dark-grey-text mt-4 class-title">Bodypump</h4>
                     <div class="classes-class">
                         <!-- Text used from https://www.lesmills.com/clubs-and-facilities/our-workouts/strength/bodypump/  -->
                         <p class="d-none d-md-block classes-p">BODYPUMP™ is a barbell workout for anyone looking to get
@@ -286,8 +288,8 @@
                             instructors to teach. Are you ready to feel the burn?</p>
                     </div>
                 </div>
-                <div class="col-6 col-md-4 class-title">
-                    <h4 class="font-weight-bold dark-grey-text mt-4">Boxing</h4>
+                <div class="col-6 col-md-4">
+                    <h4 class="font-weight-bold dark-grey-text mt-4 class-title">Boxing</h4>
                     <div class="classes-class">
                         <!-- Text used from https://www.aclosport.nl/en/sport/fit-boxing/  -->
                         <p class="d-none d-md-block classes-p">Boxing is a cardio workout in which multiple elements of
@@ -299,8 +301,8 @@
                             calories?</p>
                     </div>
                 </div>
-                <div class="col-6 col-md-4 class-title">
-                    <h4 class="font-weight-bold dark-grey-text mt-4">Spinning</h4>
+                <div class="col-6 col-md-4">
+                    <h4 class="font-weight-bold dark-grey-text mt-4 class-title">Spinning</h4>
                     <div class="classes-class">
                         <!-- Text used from https://www.aclosport.nl/en/sport/spinning/  -->
                         <p class="d-none d-md-block classes-p">A challenging, stimulating and fun training: spinning is
@@ -312,8 +314,8 @@
                             bring a towel and a water bottle.</p>
                     </div>
                 </div>
-                <div class="col-6 col-md-4 class-title">
-                    <h4 class="font-weight-bold dark-grey-text mt-4">Pilates</h4>
+                <div class="col-6 col-md-4">
+                    <h4 class="font-weight-bold dark-grey-text mt-4 class-title">Pilates</h4>
                     <div class="classes-class">
                         <!-- Text used from https://www.bodyvita.nl/en/  -->
                         <p class="d-none d-md-block classes-p">Pilates is an innovative and safe way of movement and
@@ -325,8 +327,8 @@
                             mentally stronger.</p>
                     </div>
                 </div>
-                <div class="col-6 col-md-4 class-title">
-                    <h4 class="font-weight-bold dark-grey-text mt-4">Yoga</h4>
+                <div class="col-6 col-md-4">
+                    <h4 class="font-weight-bold dark-grey-text mt-4 class-title">Yoga</h4>
                     <div class="classes-class">
                         <!-- Text used from https://www.nytimes.com/guides/well/beginner-yoga  -->
                         <p class="d-none d-md-block classes-p">It’s time to roll out your yoga mat and discover the
@@ -349,7 +351,7 @@
         <section id="timetable" class="container">
             <div>
                 <div>
-                    <h3 class="text-center">Timetable Group Lessons </h3>
+                    <h2 class="font-weight-bold text-center head-timetable">Timetable Group Lessons </h2>
                 </div>
                 <div class="timetable-classes"></div>
                 <table class="table table-bordered text-center">
@@ -439,26 +441,26 @@
     <div class="container contact-container">
         <section id="contact" class="container ">
             <div class="container text-center">
-                <h3 class="font-weight-bold ">Contact Form</h3>
+                <h2 class="font-weight-bold">Contact Form</h2>
                 <p class="contact-form-p">Please get in touch</p>
                 <form id="contact-form">
                     <div class="form-group">
-                        <label for="name" class="col-8 d-inline-block" aria-describedby="full name">Full Name</label>
+                        <label for="name" class="col-8 d-inline-block font-weight-bold dark-grey-text" aria-describedby="full name">Full Name</label>
                         <input class="col-8 form-input" type="text" id="name" name="name" placeholder="- Full Name -">
                     </div>
                     <div class="form-group">
-                        <label for="tel" class="col-8 d-inline-block" aria-describedby="Telephone">Telephone
+                        <label for="tel" class="col-8 d-inline-block font-weight-bold dark-grey-text" aria-describedby="Telephone">Telephone
                             Number</label>
                         <input class="col-8 form-input" type="tel" id="tel" name="tel" placeholder="- Phone Number -">
                     </div>
                     <div class="form-group">
-                        <label for="email" class="col-8 d-inline-block" aria-describedby="emailHelp">Email
+                        <label for="email" class="col-8 d-inline-block font-weight-bold dark-grey-text" aria-describedby="emailHelp">Email
                             Address</label>
                         <input class="col-8 form-input" type="email" id="email" name="email"
                             placeholder="- Email Address -">
                     </div>
                     <div class="form-group">
-                        <label for="info" class="col-8 d-inline-block" aria-describedby="input message">Your
+                        <label for="info" class="col-8 d-inline-block font-weight-bold dark-grey-text" aria-describedby="input message">Your
                             Message</label>
                         <textarea class="col-8 form-input" name="info" id="info"
                             placeholder="- Write your message here. -"></textarea>
@@ -620,8 +622,9 @@
                             </tr>
                         </table>
                     </div>
-                    <div class="col-4 d-none d-md-block text-center"> 
-                        <a href="#home"><img src="assets/images/logo/logo-small.png" height="80" width="194" id="logo-footer" alt="Click logo to go back to the top of the page"></a>
+                    <div class="col-4 d-none d-md-block text-center">
+                        <a href="#home"><img src="assets/images/logo/logo-small.png" height="80" width="194"
+                                id="logo-footer" alt="Click logo to go back to the top of the page"></a>
                     </div>
                     <div id="social-button-footer" class="social-buttons col-4 d-none d-sm-block d-md-none">
                         <a href="https://www.facebook.com/" target="_blank" rel="noopener"><i
