--- a/index.html
+++ b/index.html
@@ -264,7 +264,7 @@
             </div>
             <div class="row">
                 <div class="col-6 col-md-4 ">
-                    <h4 class="font-weight-bold dark-grey-text mt-4 class-title">HIIT</h4>
+                    <h5 class="font-weight-bold dark-grey-text mt-4 class-title">HIIT</h5>
                     <div class="classes-class">
                         <!-- Text used from https://www.fearlessmotivation.com/2016/09/28/no-time-for-exercise-10-reasons-why-you-should-use-hiit/  -->
                         <p class="d-none d-md-block classes-p">Every day we make great efforts at juggling demands of
@@ -277,7 +277,7 @@
                     </div>
                 </div>
                 <div class="col-6 col-md-4">
-                    <h4 class="font-weight-bold dark-grey-text mt-4 class-title">Bodypump</h4>
+                    <h5 class="font-weight-bold dark-grey-text mt-4 class-title">Bodypump</h5>
                     <div class="classes-class">
                         <!-- Text used from https://www.lesmills.com/clubs-and-facilities/our-workouts/strength/bodypump/  -->
                         <p class="d-none d-md-block classes-p">BODYPUMP™ is a barbell workout for anyone looking to get
@@ -289,7 +289,7 @@
                     </div>
                 </div>
                 <div class="col-6 col-md-4">
-                    <h4 class="font-weight-bold dark-grey-text mt-4 class-title">Boxing</h4>
+                    <h5 class="font-weight-bold dark-grey-text mt-4 class-title">Boxing</h5>
                     <div class="classes-class">
                         <!-- Text used from https://www.aclosport.nl/en/sport/fit-boxing/  -->
                         <p class="d-none d-md-block classes-p">Boxing is a cardio workout in which multiple elements of
@@ -302,7 +302,7 @@
                     </div>
                 </div>
                 <div class="col-6 col-md-4">
-                    <h4 class="font-weight-bold dark-grey-text mt-4 class-title">Spinning</h4>
+                    <h5 class="font-weight-bold dark-grey-text mt-4 class-title">Spinning</h5>
                     <div class="classes-class">
                         <!-- Text used from https://www.aclosport.nl/en/sport/spinning/  -->
                         <p class="d-none d-md-block classes-p">A challenging, stimulating and fun training: spinning is
@@ -315,7 +315,7 @@
                     </div>
                 </div>
                 <div class="col-6 col-md-4">
-                    <h4 class="font-weight-bold dark-grey-text mt-4 class-title">Pilates</h4>
+                    <h5 class="font-weight-bold dark-grey-text mt-4 class-title">Pilates</h5>
                     <div class="classes-class">
                         <!-- Text used from https://www.bodyvita.nl/en/  -->
                         <p class="d-none d-md-block classes-p">Pilates is an innovative and safe way of movement and
@@ -328,7 +328,7 @@
                     </div>
                 </div>
                 <div class="col-6 col-md-4">
-                    <h4 class="font-weight-bold dark-grey-text mt-4 class-title">Yoga</h4>
+                    <h5 class="font-weight-bold dark-grey-text mt-4 class-title">Yoga</h5>
                     <div class="classes-class">
                         <!-- Text used from https://www.nytimes.com/guides/well/beginner-yoga  -->
                         <p class="d-none d-md-block classes-p">It’s time to roll out your yoga mat and discover the
@@ -510,7 +510,7 @@
                             <label class="form-check-label" for="modal-checkbox">Remember Me</label>
                         </div>
                         <button type="submit" class="btn-slide-red">Enter</button>
-                        <p class="text-muted-signin"><small>Not yet a member? Sign up and click the "Join Us" button
+                        <p class="text-muted text-muted-signin"><small>Not yet a member? Sign up and click the "Join Us" button
                                 just below this pop-up!</small></p>
                     </form>
                 </div>
@@ -575,7 +575,7 @@
                             <div class="form-check">
                                 <input class="form-check-input" type="checkbox" id="gridCheck" required>
                                 <label class="form-check-label" for="gridCheck">
-                                    I am NOT a <span><i class="fas fa-robot"></i></span>
+                                    I am <strong>NOT</strong> a <span><i class="fas fa-robot"></i></span>
                                 </label>
                             </div>
                         </div>
