Added <p> to footer

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
                 <!-- Button based on https://jsfiddle.net/shuvamallick/3o0h5oka/  but completely customized-->
                 <!-- Trigger/Open Sign in Modal  ||  Placed above footer -->
                 <button type="button" class="btn-slide-red btn-signin-modal d-none d-md-block" data-toggle="modal"
-                    data-target="#signin-modal">Sign in</button>
+                    data-target="#signin-modal">Sign In</button>
             </nav>
         </div>
     </header>
@@ -480,7 +480,7 @@
         <div class="modal-dialog">
             <div class="modal-content">
                 <div class="modal-header">
-                    <h3 class="modal-signin col-12" id="signin-modal">Sign in</h3>
+                    <h3 class="modal-signin col-12" id="signin-modal">Sign In</h3>
                     <button type="button" class="close" data-dismiss="modal" aria-label="close">
                         <span aria-hidden="true">&times;</span>
                     </button>
@@ -649,6 +649,7 @@
                 </div>
             </section>
         </div>
+        <p class="footer-bottom-p">© Yorick van den Hurk - 2021</p>
     </footer>
 
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
