--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
             <nav id="navbar" class="navbar navbar-expand-sm navbar-dark fixed-top">
                 <!-- Navbar Logo -->
                 <a href="#home" class="navbar-brand"><img src="assets/images/logo/logo-small.png" height="50"
-                        width="110" id="logo-footer" alt="Click logo to go back to the top of the page"></a>
+                        width="110" id="logo-footer" alt="Click to go back to top of page"></a>
                 <!-- Navigation toggle-->
                 <button class="navbar-toggler" data-toggle="collapse" data-target="#navbar-menu" type="button"
                     aria-controls="navbar-menu" aria-expanded="false" aria-label="toggle-navigation">
@@ -67,7 +67,8 @@
         </div>
     </header>
 
-    <!-- http://bit.ly/3qSMcbN Used as a guideline for CSS positioning -->
+    <!-- Used as a guideline for CSS positioning http://bit.ly/3qSMcbN  -->
+        <!-- Used the Boostrap grid system for letter-placement https://getbootstrap.com/docs/4.6/layout/grid/  -->
     <!-- Hero image -->
     <div id="home" class="container-fluid callout-container">
         <!-- Callout -->
@@ -120,15 +121,15 @@
         <section id="aboutus" class="container">
             <div class="container font-weight-bold text-center">
                 <h2 class="font-weight-bold">About Us</h2>
-                <p class="aboutus-p"> ze Gym is an ultra-modern fitness center with excellent amenities and training
-                    equipment. We offer a wide range of classes and exercising programs, tailored to improve stamina and
+                <p class="aboutus-p"> ze Gym is modern fitness center with excellent amenities and training
+                    equipment. We offer a wide range of classes and programs, tailored to improve stamina and
                     fitness goals of each gym member.</p>
 
                 <p class="aboutus-p"> We aim to create a system in which everyone is respected and to provide a unique
                     and enjoyable
                     environment
                     in which everyone feels comfortable. ze Gym strives to enable everyone to be the best version of
-                    themselves. From the staff to the clients involved in the gym it is all about working for the
+                    themselves. From the staff to the clients involved in the gym, it is all about working for the
                     greater
                     good. Members at ze Gym can each select a trainer, training program and a membership
                     option by choice and personal preferences.</p>
@@ -622,9 +623,9 @@
                             </tr>
                         </table>
                     </div>
-                    <div class="col-4 d-none d-md-block text-center">
-                        <a href="#home"><img src="assets/images/logo/logo-small.png" height="80" width="194"
-                                id="logo-footer" alt="Click logo to go back to the top of the page"></a>
+                    <div class="col-4 d-none d-md-block text-center align-self-center">
+                        <a href="#home"><img src="assets/images/logo/logo-small.png" height="110" width="220"
+                                id="logo-footer" alt="Click to go back to top of page"></a>
                     </div>
                     <div id="social-button-footer" class="social-buttons col-4 d-none d-sm-block d-md-none">
                         <a href="https://www.facebook.com/" target="_blank" rel="noopener"><i
